[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "tagfile"
authors = [{name = "Benjamin Althues", email = "benjamin@babab.nl"}]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    #"Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
keywords = [
    "checksum",
    "cli",
    "clones",
    "console",
    "database",
    "duplicate",
    "duplicates",
    "file",
    "files",
    "filesize",
    "filetype",
    "filter",
    "find",
    "harddisk",
    "hash",
    "list",
    "locate",
    "ls",
    "magic",
    "manager",
    "match",
    "media",
    "mimetype",
    "organize",
    "scripting",
    "search",
    "shell",
    "size",
    "sort",
    "space",
    "sqlite",
    "tag",
    "tui",
    "unix",
    "updatedb",
]
dynamic = ["version", "description"]
dependencies = [
    "peewee >=3.17.0,<4.0",
    "pycommand >=0.4.0,<0.5",
    "python-magic >=0.4.27,<0.5",
    "rich >=13.7.0,<14.0",
]


[project.optional-dependencies]
dev = [
    "pyinstaller >=5.13.2,<6.0",
]
test = [
    "coverage >=7.3.2,<8.0",
    "flake8 >=6.1.0,<7.0",
    "genbadge[tests,coverage] >=1.1.0,<2.0",
    "pytest >=7.4.3,<8.0",
    "pytest-cov >=4.1.0,<5.0",
]
docs = [
    "mkdocs >=1.5.3,<2.0",
    "mkdocs-material[imaging] >=9.4.14,<10.0",
]


[project.urls]
Codeberg = "https://codeberg.org/babab/tagfile"
Github = "https://github.com/babab/tagfile"


[project.scripts]
tagfile = "tagfile.commands.main_cmd:entry"


[tool.flit.sdist]
exclude = [".circleci", ".gitignore"]


[tool.pytest.ini_options]
addopts = "-vv -p no:cacheprovider --junitxml=reports/junit.xml"
